--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Nombre: </h1>
-    <h1>Skype:</h1>
+    <h1>Nombre: Ariana Geraldine Londoño</h1>
+    <h1>Programa:Ingeniería de Sistemas</h1>
+    <h1>Fecha de Creación: 08/09/2020</h1>
+    <h1>Móvil: 302 4589879</h1>
+    <h1>Email: geraldinel317@gmail.com</h1>
+       
+       
+   
 </body>
 </html>
