--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <nav>
         <ul class="menu">
-            <li><a href="planing.hmtl">Borrador</li></a>
+            <li><a href="planing.hmtl">Borrador</a></li>
         </ul>
 
     </nav>
