--- a/planing.html
+++ b/planing.html
@@ -7,12 +7,14 @@
 </head>
 <body>
 
-    <h1><hr aling="center">Propiedadas Básicas de CSS, Display: inline, Block, Inline-block</hr></h1>
+    <h1>Propiedadas Básicas de CSS, Display: inline, Block, Inline-block</h1>
 
-     <h2>Objetivos</h2>
+     <h2>Objetivo general</h2>
+
+     <p>Analizar y diseñar un OVI para dar a conocer a los estudiantes de la UNAD las propiedades básicas de CSS</p>
 
      <ul>  
-         <li></li> 
+         <li> </li></li> 
          <li></li> 
          <li></li> 
 
