--- a/planing.html
+++ b/planing.html
@@ -12,9 +12,10 @@
      <h2>Objetivo general</h2>
 
      <p>Analizar y diseñar un OVI para dar a conocer a los estudiantes de la UNAD las propiedades básicas de CSS</p>
-
+    
+    <h3>Objetivos específicos</h3>
      <ul>  
-         <li> </li></li> 
+         <li> </li> 
          <li></li> 
          <li></li> 
 
