--- a/planing.html
+++ b/planing.html
@@ -15,9 +15,10 @@
     
     <h3>Objetivos específicos</h3>
      <ul>  
-         <li> </li> 
-         <li></li> 
-         <li></li> 
+        <li>Examinar y comprender que son las CSS y para que se usan en el desarrollo de una página o en el diseño de un sitio web </li> 
+         <li>Considerar e identificar las propiedades básicas con CSS</li> 
+         <li>Observar y reconocer las diferencias entre los modos de visualización de elementos en línea, elementos en bloque y la combinación de los dos</li> 
+         <li>Generar destrezas en el estudiante para el desarrollo de sistios web a traves del uso y/o aplicación de HTML y CSS3</li>
 
      </ul>
     
