--- a/planing.html
+++ b/planing.html
@@ -24,6 +24,7 @@
     
      <h2>Materiales utilizados</h2>
 
-     <h2> Contenido </h2>
+     <h2> Prototipo </h2>
+         <img src="_prototipo.png" alt="Prototipo">
 </body>
 </html>
