--- a/planing.html
+++ b/planing.html
@@ -24,7 +24,10 @@
     
      <h2>Materiales utilizados</h2>
 
+     <h2> Contenido </h2>
+        <p>Bienvenidos al curso de Diseño de sitios web, en este espacio encontrarás propiedades básicas de CSS, Display: Inline, Block, Inline-Block y mucho más.</p>
+
      <h2> Prototipo </h2>
-         <img src="_prototipo.png" alt="Prototipo">
+         <img src="prototipo.png" alt="Prototipo">
 </body>
 </html>
