--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Diseño de Sitios Web</title>
 </head>
-<h1>OVI Diseños de Sitios Web </h1>
+<h1 style="color:blue">OVI Diseños de Sitios Web </h1>
 <body>
     
     <nav>
