--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Diseño de Sitios Web</title>
+    <link rel="stylesheet" href="estilos.css"
 </head>
-<h1 style="color:blue">OVI Diseños de Sitios Web </h1>
+<h1>OVI Diseños de Sitios Web </h1>
 <body>
     
     <nav>
