--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Curso Diseño de Sitios Web</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
-<h1 class="color_azul">OVI Diseños de Sitios Web </h1>
+<h1 class="color_rojo"> OVI Diseños de Sitios Web </h1>
 <body>
     
     <nav>
