--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <nav>
         <ul class="menu">
-            <li><a href="planing.html">Borrador</a></li>
+            <li><a class="color_verde" href="planing.html">Borrador</a></li>
         </ul>
 
     </nav>
