--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Curso Diseño de Sitios Web</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
-<h1 class="color_verde"> OVI Diseños de Sitios Web </h1>
+<h1 class="color_azul"> OVI Diseños de Sitios Web </h1>
 <body>
     
     <nav>
         <ul class="menu">
-            <li><a class="color_verde" href="planing.html">Borrador</a></li>
+            <li><a class="color_azul" href="planing.html">Borrador</a></li>
         </ul>
 
     </nav>
