--- a/inicio.html
+++ b/inicio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OVI Diseño de Sitios Web</title>
-    <link rel="estilosuno.css">
+    <link rel="stylesheet" href="estilosuno.css">
 
 </head>
 <body>
