--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Diseño de Sitios Web</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilosuno.css">
 </head>
 <h1 class="color_negro"> OVI Diseños de Sitios Web </h1>
 <body>
     
-    <nav>
-        <ul class="menu">
-            <li><a class="color_negro" href="planing.html">Borrador</a></li>
-        </ul>
+    <h1 class="titulo">
 
-    </nav>
+
+        Propiedades básicas de CSS, Display: inline, block, inline-block
+
+    </h1>
          
 </body>
 </html>
